updated TODO with some questions i have

--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 * Ask spkenny what he thinks
 * Uprade to Rails 4
-* Install Factorygirl
-* make factories for users and paringsessions
-* Install simplecov
+* make factories for paringsessions
 * Sign_in helper to test logged in user
-* Complete feature view_users
+* Improve new feature viewing all users
+* Write some javascript tests with Angularjs Karma
+* Can/should karma also be used for full coverage or should we use 
+plain old rspec+capybara integration specs?
