--- a/TODO.txt
+++ b/TODO.txt
@@ -8,3 +8,4 @@ IDEAS
 - Uprade to Rails 4
 - Make a full coverage test with Rspec, Capybara, sign_in_helper
 - Perhaps test new javascript with Jasmine
+- Standardize timezones
